examples/test/testpolicy11220.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11220
  namespace: namespace372
spec:
  podSelector:
    matchLabels:
      key9: value1
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key32: value4
          key18: value21
      podSelector:
        matchLabels:
          key34: value5
          key11: value27
